Allow choosing how many of the bonuses will be randomly selected

--- a/Views/MonsterEditorWindow.xaml
+++ b/Views/MonsterEditorWindow.xaml
@@ -313,7 +313,24 @@
 						</ItemsControl.ItemTemplate>
 					</ItemsControl>
 
-					<TextBlock x:Name="modifierDescription" Style="{StaticResource Heading}" Text=""/>
+					<TextBlock x:Name="modifierDescription" TextWrapping="Wrap" Style="{StaticResource Heading}" Text=""/>
+
+					
+					<StackPanel Orientation="Horizontal" Width="720">
+						<TextBlock Text="Randomize number of bonuses or use them all:" Style="{StaticResource Heading}"/>
+						<TextBlock Text="{Binding monster.randomizedModifiersCount}" Style="{StaticResource Heading}" Margin="10,0,0,0"/>
+						<WrapPanel Orientation="Horizontal" HorizontalAlignment="Right">
+							<TextBlock Text="One" Margin="30,0,0,0" Style="{StaticResource Heading}"/>
+							<Slider x:Name="randomizedModifiersSlider" HorizontalAlignment="Left" Margin="10,7,10,0" VerticalAlignment="Top" Width="280"
+												Minimum="1" Maximum="{Binding monster.modifierList.Count}"
+												SmallChange="1" LargeChange="1"
+												TickPlacement="Both" TickFrequency="1"
+												IsSnapToTickEnabled="True"
+												Value="{Binding monster.randomizedModifiersCount}"/>
+							<TextBlock Text="All" Style="{StaticResource Heading}"/>
+						</WrapPanel>
+					</StackPanel>
+
 				</StackPanel>
 				<!--
 				</Grid>
@@ -321,21 +338,41 @@
 			</Border>
 
 			<!--difficulty-->
-			<Border Style="{StaticResource callout}" Margin="0,5,0,0">
-				<StackPanel>
-					<TextBlock Text="Custom Difficulty Setting:" Style="{StaticResource Heading}"/>
-					<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-						<TextBlock Text="This Group appears in the following Difficulties:" Style="{StaticResource SubText}"/>
-						<CheckBox Content="Easy" Foreground="Green" Margin="10,0,0,0" IsChecked="{Binding monster.isEasy}" FontWeight="Bold"/>
-						<CheckBox Content="Normal" Foreground="Yellow" Margin="10,0,0,0" IsChecked="{Binding monster.isNormal}" FontWeight="Bold"/>
-						<CheckBox Content="Hard" Foreground="Red" Margin="10,0,0,0" IsChecked="{Binding monster.isHard}" FontWeight="Bold"/>
-					</StackPanel>
-					<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap" Text="This setting allows the design of flexible encounters with the creation of Groups that only appear in specific Difficulty modes. No matter which Difficulties you select, always design the Group for Normal Difficulty with 2 Players. The Companion App will modify the Group automatically." Margin="0,5,0,0"/>
-				</StackPanel>
-			</Border>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="auto"/>
+					</Grid.ColumnDefinitions>
+
+					<Border  Grid.Column="0" Style="{StaticResource callout}" Margin="0,5,5,0">
+						<StackPanel Margin="0,0,0,0">
+							<TextBlock Text="Custom Difficulty Setting:" Style="{StaticResource Heading}"/>
+							<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+								<TextBlock Text="This Group appears in the following Difficulties:" Style="{StaticResource SubText}"/>
+								<CheckBox Content="Easy" Foreground="Green" Margin="10,0,0,0" IsChecked="{Binding monster.isEasy}" FontWeight="Bold"/>
+								<CheckBox Content="Normal" Foreground="Yellow" Margin="10,0,0,0" IsChecked="{Binding monster.isNormal}" FontWeight="Bold"/>
+								<CheckBox Content="Hard" Foreground="Red" Margin="10,0,0,0" IsChecked="{Binding monster.isHard}" FontWeight="Bold"/>
+							</StackPanel>
+							<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap" Text="This setting allows the design of flexible encounters with the creation of Groups that only appear in specific Difficulty modes. No matter which Difficulties you select, always design the Group for Normal Difficulty with 2 Players. The Companion App will modify the Group automatically." Margin="0,5,0,0"/>
+						</StackPanel>
+					</Border>
+
+					<Border  Grid.Column="1" Style="{StaticResource callout}" Margin="0,5,0,0">
+						<WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" >
+							<Button x:Name="okButton" Margin="10" Background="MediumSeaGreen" Click="OkButton_Click" IsDefault="True">
+								<Image Source="/JiME;component/Assets/ok.png" Stretch="Uniform" Width="32" Margin="5"/>
+							</Button>
+
+							<Button x:Name="cancelButton" Margin="0,10,10,10" Background="{StaticResource bgCancelDelete}" Click="CancelButton_Click" IsCancel="True">
+								<Image Source="/JiME;component/Assets/cancel.png" Stretch="Uniform" Width="32" Margin="5"/>
+							</Button>
+						</WrapPanel>
+					</Border>
+				</Grid>
 		</StackPanel>
 
 		<!--footer-->
+		<!--
 		<Border Grid.Row="1" BorderThickness="0,1,0,0" BorderBrush="Silver" HorizontalAlignment="Stretch" Background="#FF46464A">
 			<WrapPanel HorizontalAlignment="Right" >
 
@@ -348,5 +385,6 @@
 				</Button>
 			</WrapPanel>
 		</Border>
+		-->
 	</Grid>
 </Window>
