--- a/Views/CampaignWindow.xaml
+++ b/Views/CampaignWindow.xaml
@@ -189,6 +189,10 @@
 						<TextBlock Text="Campaign Trigger names are automatically appended with '[CMPN]' so they can be easily identified as Campaign Triggers in the Scenario Editor. For example, 'my trigger' would become 'my trigger [CMPN]'." Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0"/>
 						<TextBlock Text="NOTE: If a Campaign Trigger is being referenced in a Scenario, and that Campaign Trigger is later removed, the Scenario will still refer to it and will need to be updated in the Editor." Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0" FontWeight="Bold"/>
 
+						<TextBlock Text="Starting Equipment Options" Style="{StaticResource Heading}" Margin="0,10,0,0"/>
+						<CheckBox IsChecked="{Binding campaign.startWithTrinkets}" Margin="0,10,0,0" Content="Trinkets!   Each player may choose a Trinket during the Setup Campfire." Foreground="White"/>
+						<CheckBox IsChecked="{Binding campaign.startWithMounts}" Margin="0,10,0,0" Content="Mounts!   Each player may choose a Mount during the Setup Campfire." Foreground="White"/>
+
 						<TextBlock Text="Campaign Description" Style="{StaticResource Heading}" Margin="0,10,0,0"/>
 						<TextBlock Text="The Description is a very short summary of what the Campaign is about. It's shown on the Scenario selection screen in the Companion App." Style="{StaticResource SubText}" TextWrapping="Wrap"/>
 						<TextBox x:Name="descriptionText" Text="{Binding campaign.description}" Margin="0,5,0,0" Style="{StaticResource DefaultTextBox}"/>
