--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,6 +25,7 @@
 		<CommandBinding Command="local:MyCommands.NewConditionalInteraction" Executed="CommandNewConditionalInteraction_Executed" CanExecute="CommandNewConditionalInteraction_CanExecute"/>
 		<CommandBinding Command="local:MyCommands.NewDecisionInteraction" Executed="CommandNewDecisionInteraction_Executed" CanExecute="CommandNewDecisionInteraction_CanExecute"/>
 		<CommandBinding Command="local:MyCommands.NewDialogInteraction" Executed="CommandNewDialogInteraction_Executed" CanExecute="CommandNewDialogInteraction_CanExecute"/>
+		<CommandBinding Command="local:MyCommands.NewItemInteraction" Executed="CommandNewItemInteraction_Executed" CanExecute="CommandNewItemInteraction_CanExecute"/>
 		<CommandBinding Command="local:MyCommands.NewThreatInteraction" Executed="CommandNewThreatInteraction_Executed" CanExecute="CommandNewThreatInteraction_CanExecute"/>
 		<CommandBinding Command="local:MyCommands.NewMultiInteraction" Executed="CommandNewMultiInteraction_Executed" CanExecute="CommandNewMultiInteraction_CanExecute"/>
 		<CommandBinding Command="local:MyCommands.NewReplaceTokenInteraction" Executed="CommandNewReplaceTokenInteraction_Executed" CanExecute="CommandNewReplaceTokenInteraction_CanExecute"/>
@@ -47,6 +48,10 @@
                }">
 			</MenuItem>
 			<MenuItem Command="local:MyCommands.NewDialogInteraction" CommandTarget="{Binding Path=PlacementTarget,
+                        RelativeSource={RelativeSource AncestorType=ContextMenu}
+               }">
+			</MenuItem>
+			<MenuItem Command="local:MyCommands.NewItemInteraction" CommandTarget="{Binding Path=PlacementTarget,
                         RelativeSource={RelativeSource AncestorType=ContextMenu}
                }">
 			</MenuItem>
