--- a/UserControls/SidebarListView.xaml
+++ b/UserControls/SidebarListView.xaml
@@ -48,7 +48,7 @@
 	<ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="0">
 		<StackPanel>
 			<TextBlock HorizontalAlignment="Center" FontWeight="Bold" Text="{Binding Title}"></TextBlock>
-			<ComboBox x:Name="dataListView" ItemsSource="{Binding Source={StaticResource cvsListSort}}" SelectedValuePath="dataName" Margin="3" DisplayMemberPath="dataName" SelectedIndex="0"/>
+			<ComboBox x:Name="dataListView" ItemsSource="{Binding Source={StaticResource cvsListSort}}" SelectedValuePath="dataName" Margin="3" DisplayMemberPath="dataName" SelectedIndex="0" SelectionChanged="DataListView_SelectionChanged" />
 			<StackPanel Orientation="Horizontal" Margin="5">
 
 				<StackPanel.Resources>
