--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -307,7 +307,7 @@
 
             <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Right" >
                 <CheckBox Name="graphVisibleCheckbox" Content="Show Graph" IsChecked="True" Foreground="White" Checked="GraphVisibleCheckbox_Checked" Unchecked="GraphVisibleCheckbox_Unchecked" />
-                <CheckBox Name="graphAutofocusCheckbox" Content="Autofocus" IsChecked="True" Foreground="White" />
+                <CheckBox Name="graphAutofocusCheckbox" Content="Autofocus" IsChecked="True" Foreground="White" ToolTip="Focuses graph view to selected Objective, Events or Triggers if selection changes in comboboxes in the left side of the screen." />
             </StackPanel>
       
             <Button Name="graphLoadingIndicator" Content="Graph loading..." FontSize="16" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" IsHitTestVisible="False" Background="DarkGray" Height="50" Width="160" />
