--- a/Views/TileEditorWindow.xaml
+++ b/Views/TileEditorWindow.xaml
@@ -178,7 +178,7 @@
 									</Button>
 								</Grid>
 
-								<CheckBox IsChecked="{Binding selected.isStartTile}" Margin="0,10,0,0" Content="Is Starting Tile" Foreground="White"/>
+								<CheckBox IsChecked="{Binding selected.isStartTile}" Margin="0,10,0,0" Content="Is Starting Tile" Foreground="White" Unchecked="StartingTile_Unchecked"/>
 
 								<Button x:Name="editTokenButton" Margin="0,10,0,0" Background="DodgerBlue" Foreground="White" Content="Token Editor..." Click="editTokenButton_Click" Height="36" FontSize="14" FontWeight="Bold">
 								</Button>
