Start tile block can have random tiles and random tokens; start tile checkbox
Start tile checkbox only shows in the Start tile block
Stopped using "isEmpty" to mean it's the Start block. Use the dataName=="Start" as before and also the isStart==true (which is set based on "Start" being the block name.)

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -337,7 +337,7 @@
 										</Button>
 									</StackPanel>
 
-									<Button x:Name="removeChapterButton" Background="{StaticResource bgCancelDelete}" HorizontalAlignment="Stretch" IsEnabled="{Binding isEmpty, Converter={StaticResource b2vis}}" DataContext="{Binding}" Click="RemoveChapterButton_Click">
+									<Button x:Name="removeChapterButton" Background="{StaticResource bgCancelDelete}" HorizontalAlignment="Stretch" IsEnabled="{Binding isStart, Converter={StaticResource b2vis}}" DataContext="{Binding}" Click="RemoveChapterButton_Click">
 										<StackPanel Orientation="Horizontal">
 											<TextBlock Foreground="White" Text="Remove Block" VerticalAlignment="Center"/>
 											<Image Source="Assets/cancel.png" Width="24" Margin="10,0,0,0"/>
