--- a/Views/TileEditorWindow.xaml
+++ b/Views/TileEditorWindow.xaml
@@ -180,7 +180,7 @@
 									</Button>
 								</Grid>
 
-								<CheckBox IsChecked="{Binding selected.isStartTile}" Margin="0,10,0,0" Content="Is Starting Tile" Foreground="White" Unchecked="StartingTile_Unchecked" IsEnabled="{Binding chapter.isStart}" Visibility="{Binding chapter.isStart, Converter={StaticResource b2vis}}"/>
+								<CheckBox IsChecked="{Binding selected.isStartTile}" Margin="0,10,0,0" Content="Is Starting Tile" Foreground="White" Checked="StartingTile_Checked" Unchecked="StartingTile_Unchecked" IsEnabled="{Binding chapter.isStart}" Visibility="{Binding chapter.isStart, Converter={StaticResource b2vis}}"/>
 
 								<Button x:Name="editTokenButton" Margin="0,10,0,0" Background="DodgerBlue" Foreground="White" Content="Token Editor..." Click="editTokenButton_Click" Height="36" FontSize="14" FontWeight="Bold">
 								</Button>
