--- a/Views/ChapterPropertiesWindow.xaml
+++ b/Views/ChapterPropertiesWindow.xaml
@@ -46,14 +46,15 @@
 						<StackPanel>
 							<TextBlock Style="{StaticResource Heading}" Text="Tile Block Name:"/>
 							<TextBlock Style="{StaticResource SubText}">
-					A short name used within the Editor. <Bold><Italic>Required</Italic></Bold>
+								A short name used within the Editor. <Bold><Italic>Required</Italic></Bold>
 							</TextBlock>
 							<TextBox x:Name="nameTB" Text="{Binding chapter.dataName, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource DefaultTextBox}" Margin="0,5" Width="250" HorizontalAlignment="Left" IsEnabled="{Binding chapter.isStart, Converter={StaticResource binv}}"/>
 						</StackPanel>
 
 						<!--triggered by-->
 						<StackPanel>
-							<TextBlock Text="Triggered By (Required):" Style="{StaticResource Heading}" Margin="0,5"/>
+							<TextBlock Text="Triggered By:" Style="{StaticResource Heading}"/>
+							<TextBlock Style="{StaticResource SubText}"><Bold><Italic>Required</Italic></Bold></TextBlock>
 							<StackPanel Orientation="Horizontal">
 								<ComboBox ItemsSource="{Binding Source={StaticResource cvsTriggeredBy}}" DisplayMemberPath="dataName" SelectedValue="{Binding chapter.triggeredBy}" SelectedValuePath="dataName" HorizontalAlignment="Left" Width="200" IsEnabled="{Binding chapter.isEmpty, Converter={StaticResource binv}}" VerticalAlignment="Center"/>
 
@@ -63,31 +64,54 @@
 							</StackPanel>
 						</StackPanel>
 					</UniformGrid>
-
-					<!--dynamic setting-->
-					<CheckBox x:Name="dynamicCB" Foreground="White" Content="This Block is Dynamic" VerticalAlignment="Center" IsChecked="{Binding chapter.isDynamic}" Margin="0,5,0,0"/>
-					<TextBlock x:Name="dynText" Text="If a Tile Block MAY or MAY NOT be activated during a Scenario, mark it as Dynamic. For example, this is useful for optional side quests that may not always appear during a Scenario. This helps the Companion App build the Scenario properly. Dynamic Blocks don't have a Fog of War. The Start Block cannot be Dynamic." Margin="0,5,0,0" Style="{StaticResource SubText}" TextWrapping="Wrap"/>
 				</StackPanel>
 			</Border>
 
-			<!--<Border x:Name="hintBlock" Style="{StaticResource callout}" Margin="0,10,0,0">
+			<Border x:Name="hintBlock" Style="{StaticResource callout}" Margin="0,10,0,0">
 				<StackPanel>
-					<TextBlock Text="Block Hinting (Optional):" Style="{StaticResource Heading}"/>
+					<TextBlock Text="Tile Block Attachment Hinting Options:" Style="{StaticResource Heading}" Margin="0,0,0,0"/>
 
-					-->
-			<!--dynamic setting-->
-			<!--<CheckBox x:Name="dynamicCB" Foreground="White" Content="This Block is Dynamic" VerticalAlignment="Center" IsChecked="{Binding chapter.isDynamic}" Margin="0,5,0,0"/>
-					<TextBlock Text="If a Tile Block MAY or MAY NOT be activated during a Scenario, mark it as Dynamic. For example, this is useful for optional side quests that may not always appear duing a Scenario. This helps the Companion App build the Scenario properly. Dynamic Blocks don't have a Fog of War." Margin="0,5,0,0" Style="{StaticResource SubText}" TextWrapping="Wrap"/>-->
+					<!--dynamic setting-->
+					<StackPanel Orientation="Horizontal" Margin="0,5,0,5">
+						<CheckBox Foreground="White" Content="This Block is Dynamic" VerticalAlignment="Center" IsChecked="{Binding chapter.isDynamic}" Margin="0,5,0,0"/>
+						<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Bottom" Margin="10,0,0,0" ToolTipService.InitialShowDelay="0">
+							<Image.ToolTip>
+								<TextBlock>
+									If a Tile Block MAY or MAY NOT be activated during a Scenario, mark it as Dynamic. For example, this is<LineBreak/>
+									useful for optional side quests that may not always appear during a Scenario. This helps the Companion App<LineBreak/>
+									build the Scenario properly. Dynamic Blocks don't have a Fog of War. The Start Block cannot be Dynamic.
+								</TextBlock>
+							</Image.ToolTip>
+						</Image>
+					</StackPanel>
 
-			<!--<TextBlock Text="Block Hinting (Optional):" Style="{StaticResource Heading}" Margin="0,10,0,0"/>-->
-			<!--
+					<!--attachHint-->
+					<StackPanel Orientation="Horizontal">
 
-					<TextBlock Text="Optionally choose the Tile Block you'd prefer this Block to attach to in the Companion App. During Scenario creation, the Companion App will attempt to make this Block attach to the one you select below. If it can't (because it doesn't fit) or you select 'None', a random Block will be used instead." Style="{StaticResource SubText}" TextWrapping="Wrap"/>
+						<StackPanel Orientation="Horizontal">
+							<TextBlock Text="Attach to Tile Block:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
+							<ComboBox ItemsSource="{Binding chapterAttachOptions}" DisplayMemberPath="dataName" SelectedValue="{Binding chapter.attachHint}" SelectedValuePath="dataName" HorizontalAlignment="Left" Width="250" IsEnabled="{Binding chapter.isStart, Converter={StaticResource binv}}" VerticalAlignment="Center" Margin="0,5,0,0"/>
+							<!-- ItermsSource="{Binding scenario.chapterObserver}" -->
+						</StackPanel>
 
-					<ComboBox ItemsSource="{Binding scenario.chapterObserver}" DisplayMemberPath="dataName" SelectedValue="{Binding chapter.attachHint}" SelectedValuePath="dataName" HorizontalAlignment="Left" Width="250" IsEnabled="{Binding chapter.isEmpty, Converter={StaticResource binv}}" VerticalAlignment="Center" Margin="0,5,0,0"/>
+						<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Bottom" Margin="10,0,0,0" ToolTipService.InitialShowDelay="0">
+							<Image.ToolTip>
+								<TextBlock>
+									By default, Tile Blocks will try to attach to the Start Block first and if that doesn't work<LineBreak/>
+									they will try to attach to a subsequent Block following the order they are listed in this Editor.<LineBreak/>
+									<LineBreak/>
+									You may optionally choose the Block you'd prefer this Tile Block to attach to in the Companion App.<LineBreak/>
+									During Scenario creation, the Companion App will attempt to attach this Tile Block to the selected Block.<LineBreak/> 
+									If it can't (because it doesn't fit) it will try to attach to Start or a subsequent block in order.<LineBreak/>
+									<LineBreak/>
+									If you select 'Random', this Tile Block will be attached to a Block chosen at random.
+								</TextBlock>
+							</Image.ToolTip>
+						</Image>
+					</StackPanel>
 
 				</StackPanel>
-			</Border>-->
+			</Border>
 
 			<Border Style="{StaticResource callout}" Margin="0,5">
 				<StackPanel>
@@ -100,17 +124,26 @@
 								<Image Source="/JiME;component/Assets/edit.png" Height="24"/>
 							</StackPanel>
 						</Button>
-						<StackPanel Orientation="Vertical" Width="300" Margin="10,5,0,0" >
-							<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap" Height="40">
-							Use the Tile Editor to define which tiles are in this Block. <Bold>The Start Block cannot use random tiles</Bold>.
+							<TextBlock Style="{StaticResource SubText}" VerticalAlignment="Center" TextWrapping="Wrap">
+							Use the Tile Editor to define which tiles are in this Block. 
 							</TextBlock>
-						</StackPanel>
 					</StackPanel>
 
 					<!--pre-explored toggle-->
 					<!--<TextBlock Text="Pre-Exploration" Style="{StaticResource Heading}" Margin="0,10,0,0"/>-->
-					<CheckBox x:Name="preExCB" IsChecked="{Binding chapter.isPreExplored}" Content="This Block starts already Explored (Start Block only)" Foreground="White" Margin="0,5,0,0"/>
-					<TextBlock x:Name="preExText" Style="{StaticResource SubText}" Text="If this is the Start Block, you can decide whether the tiles are pre-explored. With this option CHECKED (default), the Block begins with its tiles already Explored (no Explore Token on them), and any Interactive Tokens on its tiles start revealed. With this option NOT CHECKED, all tiles in the Block except the one marked as the player start tile are unexplored, and any Interactive Tokens start unrevealed." Margin="0,5,0,0" TextWrapping="Wrap"/>
+					<StackPanel x:Name="preExCB" Orientation="Horizontal">
+					<CheckBox IsChecked="{Binding chapter.isPreExplored}" Content="This Block starts already Explored (Start Block only)" Foreground="White" Margin="0,5,0,0"/>
+						<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Bottom" Margin="10,0,0,0" ToolTipService.InitialShowDelay="0">
+							<Image.ToolTip>
+								<TextBlock>
+									If this is the Start Block, you can decide whether the tiles are pre-explored. With this<LineBreak/>
+									option CHECKED (default), the Block begins with its tiles already Explored (no Explore Token on them),<LineBreak/>
+									and any Interactive Tokens on its tiles start revealed. With this option NOT CHECKED, all tiles in the<LineBreak/>
+									Block except the one marked as the player start tile are unexplored, and any Interactive Tokens start unrevealed.
+								</TextBlock>
+							</Image.ToolTip>
+						</Image>
+					</StackPanel>
 				</StackPanel>
 			</Border>
 
@@ -124,21 +157,32 @@
 							<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"/>
 						</Button>
 					</StackPanel>
-					<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap">
-						Select an Interaction Group below. Then designate how many of the Events in the group will be randomly used. A mix of Fixed and Random Token Interactions can be used in a Block.
-					</TextBlock>
-					<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0" >
-<Bold>The Start Block cannot use Token Interaction Groups. Only Events that are marked Token Interaction can be in a Group.</Bold>
-					</TextBlock>
 					<UniformGrid Columns="2" Margin="0,5,0,0">
-						<ComboBox Name="randInter" ItemsSource="{Binding randomInteractions}" VerticalAlignment="Center" SelectionChanged="randInter_SelectionChanged" IsEnabled="{Binding chapter.usesRandomGroups}"/>
+						<StackPanel Orientation="Horizontal">
+							<ComboBox Name="randInter" ItemsSource="{Binding randomInteractions}" VerticalAlignment="Center" SelectionChanged="randInter_SelectionChanged" IsEnabled="{Binding chapter.usesRandomGroups}" MinWidth="290"/>
+							<Image Source="/JiME;component/Assets/warning.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Center" Margin="5,0,0,0" ToolTipService.InitialShowDelay="0">
+								<Image.ToolTip>
+									<TextBlock>
+										NOTE: If you set this Group and you later change one or more Events in the Group to no<LineBreak/>
+										longer be a Token Interaction, the Group will no longer be a valid Token Interaction Group.
+									</TextBlock>
+								</Image.ToolTip>
+							</Image>
+							<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Center" Margin="5,0,0,0" ToolTipService.InitialShowDelay="0">
+								<Image.ToolTip>
+									<TextBlock>
+										Select an Interaction Group from the list. Then designate how many of the Events in the group<LineBreak/>
+										will be randomly used. A mix of Fixed and Random Token Interactions can be used in a Block.<LineBreak/>
+										Only Events that are marked Token Interaction can be in a Group.
+									</TextBlock>
+								</Image.ToolTip>
+							</Image>
+						</StackPanel>
 						<StackPanel Margin="10,0">
 							<TextBlock x:Name="selectedInfoText" Style="{StaticResource SubText}" TextWrapping="Wrap" Text="There are X Token Interactions in the selected group." VerticalAlignment="Center" FontWeight="Bold"/>
 							<TextBlock x:Name="fixedCountText" Style="{StaticResource SubText}" Text="There are X fixed Tokens in this Block." FontWeight="Bold"/>
 						</StackPanel>
 					</UniformGrid>
-
-					<TextBlock Text="NOTE: If you set this Group and you later change one or more Events in the Group to no longer be a Token Interaction, the Group will no longer be a valid Token Interaction Group." TextWrapping="Wrap" Style="{StaticResource Heading}" Margin="0,5,0,0"/>
 
 					<TextBlock x:Name="spaceInfoText2" Style="{StaticResource Heading}" Text="There are X spaces available on this Block's tiles to place Tokens." Margin="0,5,0,0"/>
 
