--- a/Views/ChapterPropertiesWindow.xaml
+++ b/Views/ChapterPropertiesWindow.xaml
@@ -9,7 +9,8 @@
         Title="Tile Block Properties" Style="{StaticResource DefaultWindow}" Width="750" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered" Closing="Window_Closing">
 
 	<Window.Resources>
-		<local:BoolInvertVisibility x:Key="b2vis"/>
+		<local:BoolInvertVisibility x:Key="b2invvis"/>
+		<local:BoolToVisibility x:Key="b2vis"/>
 		<local:BoolInvertConverter x:Key="binv"/>
 		<CollectionViewSource x:Key="cvsTriggeredBy" Source="{Binding scenario.triggersObserver}">
 			<CollectionViewSource.SortDescriptions>
@@ -67,7 +68,76 @@
 				</StackPanel>
 			</Border>
 
-			<Border x:Name="hintBlock" Style="{StaticResource callout}" Margin="0,10,0,0">
+			<Border Style="{StaticResource callout}" Margin="0,5,0,0">
+				<StackPanel>
+					<TextBlock Text="Block Tiles" Style="{StaticResource Heading}"/>
+					<StackPanel Orientation="Horizontal">
+						<CheckBox x:Name="randomToggleCB" Content="This Block uses random Tiles." Foreground="White" IsChecked="{Binding chapter.isRandomTiles}" VerticalAlignment="Center" Margin="0,0,10,0" Click="RandomToggleCB_Click"/>
+						<Button x:Name="TileEditButton" Click="TileEditButton_Click" Background="DodgerBlue" HorizontalAlignment="Left" Foreground="White" Height="36">
+							<StackPanel Orientation="Horizontal" Margin="5,0">
+								<TextBlock Text="Tile Editor..." Style="{StaticResource Heading}" VerticalAlignment="Center" Margin="0,0,5,0"/>
+								<Image Source="/JiME;component/Assets/edit.png" Height="24"/>
+							</StackPanel>
+						</Button>
+						<TextBlock Style="{StaticResource SubText}" VerticalAlignment="Center" TextWrapping="Wrap">
+							Use the Tile Editor to define which tiles are in this Block.
+						</TextBlock>
+					</StackPanel>
+
+					<!--pre-explored toggle-->
+					<!--<TextBlock Text="Pre-Exploration" Style="{StaticResource Heading}" Margin="0,10,0,0"/>-->
+					<StackPanel x:Name="preExCB" Orientation="Horizontal">
+						<CheckBox IsChecked="{Binding chapter.isPreExplored}" Content="This Block starts already Explored (Start Block only)" Foreground="White" Margin="0,5,0,0"/>
+						<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Bottom" Margin="10,0,0,0" ToolTipService.InitialShowDelay="0">
+							<Image.ToolTip>
+								<TextBlock>
+									If this is the Start Block, you can decide whether the tiles are pre-explored. With this<LineBreak/>
+									option CHECKED (default), the Block begins with its tiles already Explored (no Explore Token on them),<LineBreak/>
+									and any Interactive Tokens on its tiles start revealed. With this option NOT CHECKED, all tiles in the<LineBreak/>
+									Block except the one marked as the player start tile are unexplored, and any Interactive Tokens start unrevealed.
+								</TextBlock>
+							</Image.ToolTip>
+						</Image>
+					</StackPanel>
+
+
+					<StackPanel Orientation="Horizontal" Visibility="{Binding chapter.isRandomTiles, Converter={StaticResource b2vis}}" Margin="0,5,0,0">
+						<TextBlock Text="Tile Density:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
+						<ComboBox x:Name="tileDensityPreferenceCB" 
+								  ItemsSource="{Binding DensityPreferenceValues}" 
+								  SelectedItem="{Binding chapter.tileDensityPreference}"
+								  IsEnabled="{Binding chapter.isRandomTiles}" 
+								  HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,5,0,0"/>
+
+						<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Bottom" Margin="10,0,0,0" ToolTipService.InitialShowDelay="0">
+							<Image.ToolTip>
+								<TextBlock>
+									You can choose how well one Tile will try to fit to the other Tiles in the Tile Block<LineBreak/>
+									when using random Tiles.<LineBreak/><LineBreak/>
+									"First" will take the first viable connection. This is and has been the default behavior<LineBreak/><LineBreak/>
+									All the other options will first test all available connections and then randomly choose<LineBreak/>
+									one viable placment where the number of attachments match the option you chose.<LineBreak/><LineBreak/>
+									As an example, if the Tile finds valid placemnts with 1, 2, 3, 4, 5, or 6 attachments to<LineBreak/>
+									the rest of the Tiles in the Tile Block, the various options would go like this:<LineBreak/><LineBreak/>
+									LOWEST: randomly choose an option with only 1 connection<LineBreak/>
+									LOW Range: randomly choose an option with 1 or 2 connections<LineBreak/>
+									LOW-MEDIUM Range: randomly choose an option with 1, 2, 3, or 4 connections<LineBreak/>
+									MEDIAN: randomly choose an option with 3 connections<LineBreak/>
+									MEDIUM Range: randomly choose an option with 3 or 4 connections<LineBreak/>
+									MEDIUM-HIGH Range: randomly choose an option with 3, 4, 5, or 6 connections<LineBreak/>
+									HIGH Range: randomly choose an option with 5 or 6 connections<LineBreak/>
+									HIGHEST: randomly choose an option with 6 connections<LineBreak/>
+
+								</TextBlock>
+							</Image.ToolTip>
+						</Image>
+					</StackPanel>
+				</StackPanel>
+			</Border>
+
+
+
+			<Border x:Name="hintBlock" Style="{StaticResource callout}" Margin="0,5,0,0">
 				<StackPanel>
 					<TextBlock Text="Tile Block Attachment Hinting Options:" Style="{StaticResource Heading}" Margin="0,0,0,0"/>
 
@@ -90,8 +160,8 @@
 
 						<StackPanel Orientation="Horizontal">
 							<TextBlock Text="Attach to Tile Block:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
-							<ComboBox ItemsSource="{Binding chapterAttachOptions}" DisplayMemberPath="dataName" SelectedValue="{Binding chapter.attachHint}" SelectedValuePath="dataName" HorizontalAlignment="Left" Width="250" IsEnabled="{Binding chapter.isStart, Converter={StaticResource binv}}" VerticalAlignment="Center" Margin="0,5,0,0"/>
-							<!-- ItermsSource="{Binding scenario.chapterObserver}" -->
+							<ComboBox ItemsSource="{Binding chapterAttachOptions}" DisplayMemberPath="dataName" SelectedValue="{Binding chapter.attachHint}" SelectedValuePath="dataName" HorizontalAlignment="Left" Width="250" IsEnabled="{Binding chapter.isStart, Converter={StaticResource binv}}" VerticalAlignment="Center" Margin="0,5,0,0" SelectionChanged="attachHint_SelectionChanged"/>
+							<!-- ItemsSource="{Binding scenario.chapterObserver}" -->
 						</StackPanel>
 
 						<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Bottom" Margin="10,0,0,0" ToolTipService.InitialShowDelay="0">
@@ -110,36 +180,25 @@
 						</Image>
 					</StackPanel>
 
-				</StackPanel>
-			</Border>
 
-			<Border Style="{StaticResource callout}" Margin="0,5">
-				<StackPanel>
-					<TextBlock Text="Block Tiles" Style="{StaticResource Heading}"/>
 					<StackPanel Orientation="Horizontal">
-						<CheckBox x:Name="randomToggleCB" Content="This Block uses random Tiles." Foreground="White" IsChecked="{Binding chapter.isRandomTiles}" VerticalAlignment="Center" Margin="0,0,10,0" Click="RandomToggleCB_Click"/>
-						<Button x:Name="TileEditButton" Click="TileEditButton_Click" Background="DodgerBlue" HorizontalAlignment="Left" Foreground="White" Height="36">
-							<StackPanel Orientation="Horizontal" Margin="5,0">
-								<TextBlock Text="Tile Editor..." Style="{StaticResource Heading}" VerticalAlignment="Center" Margin="0,0,5,0"/>
-								<Image Source="/JiME;component/Assets/edit.png" Height="24"/>
-							</StackPanel>
-						</Button>
-							<TextBlock Style="{StaticResource SubText}" VerticalAlignment="Center" TextWrapping="Wrap">
-							Use the Tile Editor to define which tiles are in this Block. 
-							</TextBlock>
-					</StackPanel>
+						<TextBlock Text="Attach to Specific Tile:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
+						<ComboBox x:Name="attachToTileCB" 
+								  ItemsSource="{Binding chapterTileAttachOptions}" 
+								  DisplayMemberPath="idNumber" 
+								  SelectedValuePath="idNumber" 
+								  SelectedValue="{Binding chapter.attachTileHint}" HorizontalAlignment="Left" IsEnabled="{Binding chapter.isStart, Converter={StaticResource binv}}" VerticalAlignment="Center" Margin="0,5,0,0"/>
 
-					<!--pre-explored toggle-->
-					<!--<TextBlock Text="Pre-Exploration" Style="{StaticResource Heading}" Margin="0,10,0,0"/>-->
-					<StackPanel x:Name="preExCB" Orientation="Horizontal">
-					<CheckBox IsChecked="{Binding chapter.isPreExplored}" Content="This Block starts already Explored (Start Block only)" Foreground="White" Margin="0,5,0,0"/>
 						<Image Source="/JiME;component/Assets/help.png" Stretch="Uniform"  Width="24" Height="24" VerticalAlignment="Bottom" Margin="10,0,0,0" ToolTipService.InitialShowDelay="0">
 							<Image.ToolTip>
 								<TextBlock>
-									If this is the Start Block, you can decide whether the tiles are pre-explored. With this<LineBreak/>
-									option CHECKED (default), the Block begins with its tiles already Explored (no Explore Token on them),<LineBreak/>
-									and any Interactive Tokens on its tiles start revealed. With this option NOT CHECKED, all tiles in the<LineBreak/>
-									Block except the one marked as the player start tile are unexplored, and any Interactive Tokens start unrevealed.
+									You can pick a specific tile that belongs to the 'Attach to Tile Block' above.<LineBreak/>
+									The Companion App will first try to attach this Tile Block to that exact Tile.<LineBreak/>
+									If the Tile Block can't be attached to that Tile, the Companion App will then<LineBreak/>
+									try to attach it to other Tiles from the 'Attach to Tile Block'.<LineBreak/>
+									<LineBreak/>
+									Leave the selection blank or select '0' if you don't want this Tile Block to<LineBreak/>
+									attach to a specific Tile.
 								</TextBlock>
 							</Image.ToolTip>
 						</Image>
@@ -148,7 +207,7 @@
 			</Border>
 
 			<!--random token interactions-->
-			<Border x:Name="randomBlock" Style="{StaticResource callout}" Margin="0,0,0,0">
+			<Border x:Name="randomBlock" Style="{StaticResource callout}" Margin="0,5,0,0">
 				<StackPanel>
 					<StackPanel Orientation="Horizontal">
 						<TextBlock Style="{StaticResource Heading}" Text="Random Token Interaction Group"/>
@@ -194,13 +253,13 @@
 			</Border>
 
 			<!--text-->
-			<Border x:Name="flavorBox" Style="{StaticResource callout}" IsEnabled="{Binding chapter.isEmpty, Converter={StaticResource binv}}" Margin="0,5,0,5">
+			<Border x:Name="flavorBox" Style="{StaticResource callout}" IsEnabled="{Binding chapter.isEmpty, Converter={StaticResource binv}}" Margin="0,5,0,0">
 				<StackPanel>
 					<TextBlock Text="Flavor Text" Style="{StaticResource Heading}"/>
 					<TextBlock Style="{StaticResource SubText}" TextWrapping="Wrap">
 					This text is shown when the Tile Block is activated. It is only shown once. <Bold><Italic>Optional</Italic></Bold>
 					</TextBlock>
-					<Grid Visibility="{Binding ElementName=noflavor,Path=IsChecked,Converter={StaticResource b2vis}}">
+					<Grid Visibility="{Binding ElementName=noflavor,Path=IsChecked,Converter={StaticResource b2invvis}}">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="*"/>
 							<ColumnDefinition Width="auto"/>
